Add hidden conflict UI for testing
The conflict UI interaction seems not worth to be tested with
themis-vim, here add a `g:cycle_conflict_ui` named `_test`, which only
collects conflicting group items (like what user see in other UIs).
And set a `g:cycle_test_conflict` variable for later assertion.

--- a/test/.themisrc
+++ b/test/.themisrc
@@ -17,3 +17,5 @@ let g:Expect = themis#helper('expect')
 call themis#helper('command').with(themis#helper('assert')).with({'Expect': g:Expect})
 
 let g:mapleader = '\'
+
+let g:cycle_conflict_ui = '_test'
