--- a/test/.themisrc
+++ b/test/.themisrc
@@ -3,6 +3,7 @@ set encoding=utf-8
 let s:repo = simplify(expand('<sfile>:h:h'))
 execute printf('set runtimepath=%s', fnameescape(s:repo))
 execute printf('set runtimepath+=%s', fnameescape(s:repo) . '/test/vim-themis')
+execute printf('set runtimepath+=%s', fnameescape(s:repo) . '/test/cycle-test')
 if has('nvim')
   execute printf('set runtimepath+=%s', $VIMRUNTIME)
 endif
