Also make select UI dynamically loaded
Like fe93ee4 handles conflict UI, now also use unified way to handle
select UI func.

--- a/test/.themisrc
+++ b/test/.themisrc
@@ -19,4 +19,8 @@ call themis#helper('command').with(themis#helper('assert')).with({'Expect': g:Ex
 
 let g:mapleader = '\'
 
+
+let g:cycle_select_ui = '_test'
 let g:cycle_conflict_ui = '_test'
+
+nmap <silent> <unique> <Leader>s <Plug>CycleSelect
